Fixed a few lines in the manifest regarding the assigned icon. Created transparent icon to set on top of the drawer.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'androidx.navigation.safeargs'
 android {
     compileSdkVersion 28
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "it.unica.ium.italiantour"
         minSdkVersion 15
         targetSdkVersion 28
