--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
     <application
         android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="false"
-        android:icon="@drawable/it_launcher_foreground"
+        android:icon="@mipmap/it_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/it_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
